@@ -11,6 +11,7 @@ Release 1.4
 #50 XML Schema for extractor configs
 #51 Normalize 'sources' map keys
 #52 Descriptor versioning
+#53 FileExtractorModelLoader - a file-based IExtractorModelLoader
 
 Release 1.3 2015-04-09
 
